--- a/Ek-ecommerce/package.json
+++ b/Ek-ecommerce/package.json
@@ -24,10 +24,13 @@
   },
   "dependencies": {
     "@adonisjs/core": "^5.5.3",
+    "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/repl": "^3.1.9",
     "@adonisjs/session": "^6.1.4",
     "@adonisjs/shield": "^7.0.8",
     "@adonisjs/view": "^6.1.2",
+    "luxon": "^2.3.1",
+    "mysql": "^2.18.1",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
