--- a/Ek-ecommerce/package.json
+++ b/Ek-ecommerce/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ek-ecommerce",
+  "name": "ek-ecommerce",
   "version": "1.0.0",
   "private": true,
   "scripts": {
@@ -23,14 +23,16 @@
     "youch-terminal": "^2.1.3"
   },
   "dependencies": {
+    "@adonisjs/auth": "^5.1.1",
     "@adonisjs/core": "^5.5.3",
     "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/repl": "^3.1.9",
-    "@adonisjs/session": "^6.1.4",
+    "@adonisjs/session": "^4.0.6",
     "@adonisjs/shield": "^7.0.8",
     "@adonisjs/view": "^6.1.2",
     "luxon": "^2.3.1",
     "mysql": "^2.18.1",
+    "phc-argon2": "^1.1.3",
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
