Request rate limiting aka throttling added for login and signup routes

--- a/Ek-ecommerce/.adonisrc.json
+++ b/Ek-ecommerce/.adonisrc.json
@@ -27,7 +27,9 @@
     "@adonisjs/shield",
     "@adonisjs/lucid",
     "@adonisjs/auth",
-    "@adonisjs/bouncer"
+    "@adonisjs/bouncer",
+    "@adonisjs/redis",
+    "adonis-request-throttler"
   ],
   "metaFiles": [
     {
