--- a/Ek-ecommerce/package.json
+++ b/Ek-ecommerce/package.json
@@ -27,10 +27,12 @@
     "@adonisjs/bouncer": "^2.2.7",
     "@adonisjs/core": "^5.5.3",
     "@adonisjs/lucid": "^10.0.0",
+    "@adonisjs/redis": "^7.2.0",
     "@adonisjs/repl": "^3.1.9",
     "@adonisjs/session": "^4.0.6",
     "@adonisjs/shield": "^4.0.3",
     "@adonisjs/view": "^6.1.2",
+    "adonis-request-throttler": "^2.0.3",
     "luxon": "^2.3.1",
     "mysql": "^2.18.1",
     "phc-argon2": "^1.1.3",
