--- a/Ek-ecommerce/tsconfig.json
+++ b/Ek-ecommerce/tsconfig.json
@@ -33,7 +33,9 @@
       "@adonisjs/shield",
       "@adonisjs/lucid",
       "@adonisjs/auth",
-      "@adonisjs/bouncer"
+      "@adonisjs/bouncer",
+      "@adonisjs/redis",
+      "adonis-request-throttler"
     ]
   }
 }
