Roles: migration, model and seeder First, a migration file to alter the the roles table (by deleting the 'description' column) was created: 'alter_roles_remove_description'. Then the 'Role' model was completed. 'adonisjs/lucid-slugify' package was used for generating slugs for the Role model. Then a seeder for 'roles' table that seeds a USER, CMS_USER and ADMIN roles was created.

--- a/Ek-ecommerce/package.json
+++ b/Ek-ecommerce/package.json
@@ -27,6 +27,7 @@
     "@adonisjs/bouncer": "^2.2.7",
     "@adonisjs/core": "^5.5.3",
     "@adonisjs/lucid": "^10.0.0",
+    "@adonisjs/lucid-slugify": "^2.1.5",
     "@adonisjs/redis": "^7.2.0",
     "@adonisjs/repl": "^3.1.9",
     "@adonisjs/session": "^4.0.6",
