--- a/Ek-ecommerce/.adonisrc.json
+++ b/Ek-ecommerce/.adonisrc.json
@@ -29,7 +29,8 @@
     "@adonisjs/auth",
     "@adonisjs/bouncer",
     "@adonisjs/redis",
-    "adonis-request-throttler"
+    "adonis-request-throttler",
+    "@adonisjs/lucid-slugify"
   ],
   "metaFiles": [
     {
