Password reset feature Password reset feature implemented with mail package. Migration for altering users table to add 'password_reset_token' attribute. Signed URL for the password reset route. New validators for validating the forgot-password email field and reset-password password/confirmation fields.

--- a/Ek-ecommerce/.adonisrc.json
+++ b/Ek-ecommerce/.adonisrc.json
@@ -5,7 +5,8 @@
     "@adonisjs/core/build/commands/index.js",
     "@adonisjs/repl/build/commands",
     "@adonisjs/lucid/build/commands",
-    "@adonisjs/bouncer/build/commands"
+    "@adonisjs/bouncer/build/commands",
+    "@adonisjs/mail/build/commands"
   ],
   "exceptionHandlerNamespace": "App/Exceptions/Handler",
   "aliases": {
@@ -30,7 +31,8 @@
     "@adonisjs/bouncer",
     "@adonisjs/redis",
     "adonis-request-throttler",
-    "@adonisjs/lucid-slugify"
+    "@adonisjs/lucid-slugify",
+    "@adonisjs/mail"
   ],
   "metaFiles": [
     {
