--- a/Ek-ecommerce/package.json
+++ b/Ek-ecommerce/package.json
@@ -28,6 +28,7 @@
     "@adonisjs/core": "^5.5.3",
     "@adonisjs/lucid": "^10.0.0",
     "@adonisjs/lucid-slugify": "^2.1.5",
+    "@adonisjs/mail": "^8.0.1",
     "@adonisjs/redis": "^7.2.0",
     "@adonisjs/repl": "^3.1.9",
     "@adonisjs/session": "^4.0.6",
